# prisoner-dilemma

./: PrisonerDilemma_model_data_iter_50_steps_25_2022-08-16-18-31-07.517710.csv  PrisonerDilemma_model_data_iter_50_steps_25_2022-08-18-16-50-23.431777.csv  README.md  batch_runner.py  pyproject.toml
pd_grid/: agent.py  model.py  portrayal.py  server.py
