[tool.poetry]
name = "prisoner-dilemma"
version = "0.1.0"
description = ""
authors = ["Alexandre Augusto <alexandrebarbaruiva@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Mesa = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
